--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,9 @@ name: Rust
 on:
   push: {}
   pull_request: {}
+  schedule:
+    # Min Hr Day Month Weekday; so this should be 1am each day.
+    - cron: '* 1 * * *'
 
 jobs:
   build:
@@ -19,7 +22,7 @@ jobs:
         default: true
     - uses: actions/checkout@v1
     - name: Get ARM Binutils
-      run: sudo apt-get update && sudo apt-get install binutils-arm-none-eabi -Y
+      run: sudo apt-get update && sudo apt-get install binutils-arm-none-eabi --assume-yes
     - uses: actions-rs/cargo@v1
       with:
         toolchain: ${{ matrix.rust.toolchain }}
